# mediatheque

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
database/: create_table.sql  drop_table.sql  init_constant.sql
src/: app.py
src/api/: app.py  auteur.py  livre.py  livre_type.py
src/ui/: app.py
src/ui/pages/: admin.py
src/utils/: init_db.py
